remove user id from integration
